--- a/README
+++ b/README
@@ -7,3 +7,6 @@ eg, if a company is represented by subdomain of the url, you will always have a 
 puts "so if two company's exist, 7vals and sevenvals, then their first users will have urls: http://7vals.easyofficeinventory.com/users/1 and http://sevenvals.easyofficeinventory.com/users/1
 puts "note how the users/1 is now used to get the sequence number and NOT the unique id of the user
 
+
+Feel free to get in touch for any specific questions until the help, support group and readme are not done at info@7vals.com 
+http://www.7vals.com
